# wolf-eepy

./: Dockerfile  LICENSE  README.md  healthcheck.py  logging_config.py  main.py  monitor.py  pyproject.toml
.github/workflows/: publish-image.yml
src/: main.py
src/healthcheck/: healthcheck.py
src/monitor/: healthlock.py  monitor.py
