[project]
name = "wolf-eepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
    "requests-unixsocket>=0.4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[project.scripts]
wolf-eepy-monitor = "main:monitor"
wolf-eepy-healthcheck = "main:healthcheck"

[tool.uv]
package = true
